# black_box_testing_framework

./: .gitlab-ci.yml  CONTRIBUTING.MD  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  todo.txt
src/: __init__.py  config.py  consts.py  data_func.py
src/clients/: api.py  db.py  requests_kwargs_func.py
src/entity/api_entity/: api_path.py
src/entity/api_entity/credit_card/: __init__.py  api_func.py  api_func_positive.py  api_path.py
src/entity/api_entity/user/: __init__.py  api_func.py  api_func_positive.py  api_path.py  data_func.py
src/entity/db_entity/: data_func.py
src/entity/db_entity/credit_card/: __init__.py  db_func.py
src/entity/db_entity/user/: __init__.py  db_func.py
src/entity/high_level/: credit_card.py  data_func.py  user.py
tests/: config.py  conftest.py
tests/demo/: test_api_func.py  test_raw_requests.py
tests/my_scenarios/: test_algorithm_calculating_available_credit_limit.py  test_all_api.py  test_four.py  test_one.py  test_three.py  test_two.py
tests/user/: test_auth.py  test_document.py  test_get.py  test_registration.py  test_scenario.py
